# greentic-messaging

./: .env.example  .gitignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Justfile  MIGRATION_STATUS.md  Makefile  README.md  seeds.yaml
.cargo/: config.toml
.codex/: PR-01.md  PR-02.md  PR-03.md  PR-04.md  PR-05.md  PR-08.md  PR-10A.md  PR-10B.md  README.md  STATE.json  TenPR-01.md  TenPR-04.md  TenPR-05.md  TenPR-07.md  TenPR-VAL-01.md  repo_overview.md
.codex/dev-viewer/: CODEX_PROMPT.md  PR-01-provider-loading.md  PR-02-dynamic-platforms.md  PR-03-operator-send.md
.codex/done/: GM-PRs.md  PR-06.md  PR-07.md  TEST-PR.md  TenPR-02.md  TenPR-03.md  TenPR-06.md
.codex/providers/: PR-slack-parity.md  PR-teams-parity.md  PR-telegram-parity.md  PR-webchat-parity.md  PR-webex-parity.md  PR-whatsapp-parity.md  PROVIDER_PARITY_INDEX.md
.github/workflows/: binstall-greentic-messaging-test.yml  binstall-greentic-messaging.yml  ci.yml  conformance.yml  coverage.yml  greentic-tools.yml  legacy-providers.yml  legacy.yml  messaging-test.yml  publish.yml  push-validator.yml  validator-pack.yml
apps/cli-dlq/: Cargo.toml
apps/cli-dlq/src/: main.rs
apps/egress-common/: Cargo.toml
apps/egress-common/src/: egress.rs  lib.rs  telemetry.rs
apps/egress-slack/: Cargo.toml
apps/egress-slack/src/: main.rs
apps/egress-slack/tests/: e2e_slack.rs
apps/egress-teams/: Cargo.toml
apps/egress-teams/src/: main.rs
apps/egress-teams/tests/: e2e_teams.rs
apps/egress-telegram/: Cargo.toml
apps/egress-telegram/src/: main.rs  sender.rs
apps/egress-telegram/tests/: e2e_telegram.rs
apps/egress-webchat/: Cargo.toml
apps/egress-webchat/src/: main.rs
apps/egress-webchat/static/: index.html
apps/egress-webex/: Cargo.toml
apps/egress-webex/src/: client.rs  main.rs
apps/egress-webex/tests/: e2e_webex.rs
apps/egress-whatsapp/: Cargo.toml
apps/egress-whatsapp/src/: main.rs
apps/egress-whatsapp/tests/: e2e_whatsapp.rs
apps/ingress-common/: Cargo.toml
apps/ingress-common/src/: idempotency.rs  lib.rs  rate.rs  reqid.rs  respond.rs  security.rs  session.rs  telemetry.rs  webex.rs
apps/ingress-slack/: Cargo.toml
apps/ingress-slack/src/: main.rs
apps/ingress-teams/: Cargo.toml
apps/ingress-teams/src/: main.rs
apps/ingress-telegram/: Cargo.toml
apps/ingress-telegram/src/: config.rs  main.rs  reconciler.rs  secrets.rs  telegram_api.rs
apps/ingress-webchat/: Cargo.toml
apps/ingress-webchat/src/: main.rs
apps/ingress-webchat/static/: index.html
apps/ingress-webex/: Cargo.toml
apps/ingress-webex/src/: main.rs  normalise.rs  verify.rs
apps/ingress-whatsapp/: Cargo.toml
apps/ingress-whatsapp/src/: main.rs
apps/messaging-egress/: Cargo.toml
apps/messaging-egress/src/: adapter_registry.rs  config.rs  lib.rs  main.rs  main_logic.rs
apps/messaging-egress/tests/: adapter_registry_extension.rs  http_runner_client.rs  ingress_egress_roundtrip.rs  outbound_publish.rs
apps/messaging-gateway/: Cargo.toml
apps/messaging-gateway/src/: config.rs  http.rs  lib.rs  main.rs  main_logic.rs
apps/messaging-gateway/tests/: ingress_publish.rs  no_env_vars.rs
apps/messaging-tenants/: Cargo.toml
apps/messaging-tenants/src/: main.rs  platform.rs  uri.rs
apps/mock-slack/: Cargo.toml
apps/mock-slack/src/: main.rs
apps/mock-telegram/: Cargo.toml
apps/mock-telegram/src/: main.rs
apps/runner/: Cargo.toml
apps/runner/src/: card_node.rs  engine.rs  flow_registry.rs  lib.rs  main.rs  model.rs  qa_node.rs  session.rs  template_node.rs  tool_node.rs
apps/runner/tests/: chaos_dup_and_transient.rs  install_metadata.rs
apps/slack_oauth/: Cargo.toml
apps/slack_oauth/src/: main.rs
apps/subscriptions-teams/: Cargo.toml
apps/subscriptions-teams/src/: lib.rs  main.rs
apps/subscriptions-teams/tests/: worker.rs
ci/: README.md  audit.sh  legacy_check.sh  local_check.sh
conformance/webchat/: Cargo.toml
conformance/webchat/src/: lib.rs
conformance/webchat/tests/: webchat_conformance.rs
crates/greentic-messaging-cli/: Cargo.toml
crates/greentic-messaging-cli/assets/: stack.yml
crates/greentic-messaging-cli/src/: main.rs
crates/greentic-messaging-cli/tests/: cli.rs
crates/greentic-messaging-pack-validator/: Cargo.toml
crates/greentic-messaging-pack-validator/src/: lib.rs
crates/greentic-messaging-validate/: Cargo.toml
crates/greentic-messaging-validate/src/: lib.rs
crates/greentic-messaging-validate/tests/: pack_validation.rs  validators.rs
crates/gsm-bus/: Cargo.toml
crates/gsm-bus/src/: lib.rs
crates/messaging-bus/: Cargo.toml
crates/messaging-core/: Cargo.toml
crates/messaging-test/: Cargo.toml
deploy/helm/: values-otel-endpoint.yaml
deploy/otel/: adot-collector.yaml  otelcol-azure.yaml  otelcol-gcp.yaml  otelcol-oci.yaml  otelcol-openstack.yaml
deploy/tofu/: otel_outputs.tf
docs/: AUDIT_DEPENDENCIES.md  AUDIT_INVENTORY.md  AUDIT_METADATA.json  AUDIT_OVERVIEW.md  AUDIT_VALIDATOR_TREE.txt  DESIGN-telemetry-secrets.md  MESSAGING_RUNTIME_CONTRACT.md  README.md  changelog.md  cli.md  getting-started.md  messaging_adapter_loading.md  messaging_adapters_inventory.md  messaging_adapters_migration_plan.md  messaging_bus_flow.md  messaging_provider_core_flows.md  pack-validation.md  pack_generation.md  provider_core_messaging_ops.md  provider_extensions_adapters_migration.md  repo_worker_envelopes.md  validation.md
docs-archive/: DESIGN-telemetry-secrets.md  cli.md  getting-started.md  legacy.md  messaging_bus_flow.md  provider_extensions_adapters_migration.md  repo_state_adapters_vs_provider_extensions.md  webchat.md
docs-archive/audit/: 01-crate-map.md  (+8 more)
fixtures/: egress.request.json  ingress.request.json  setup.input.json
legacy/: Cargo.toml
scripts/: Cargo.toml  build-validator-component.sh  build-validator-pack.sh  teams_setup.rs  telegram_setup.rs  version-tools.sh  whatsapp_setup.rs
scripts/audit/: 00_dump_metadata.sh  01_dump_trees.sh  02_rg_key_symbols.sh  03_feature_map.sh
scripts/pack-fixture-builder/: Cargo.toml
scripts/pack-fixture-builder/src/: main.rs
tools/: generate_packs.sh  tunnel.sh
(+400 files in other folders)
