[workspace]
members = [
  "apps/runner",
  "apps/ingress-common",
  "apps/ingress-telegram",
  "apps/egress-telegram",
  "apps/subscriptions-teams",
  "apps/mock-telegram",
  "apps/mock-slack",
  "apps/ingress-webchat",
  "apps/egress-webchat",
  "apps/ingress-teams",
  "apps/subscriptions-teams",
  "apps/egress-teams",
  "apps/egress-slack",
  "apps/ingress-slack",
  "apps/ingress-whatsapp",
  "apps/ingress-webex",
  "apps/egress-whatsapp",
  "apps/egress-webex",
  "apps/egress-common",
  "libs/gsm-provider-registry",
  "libs/core",
  "libs/translator",
  "libs/security",
  "libs/telemetry",
  "libs/idempotency",
  "libs/backpressure",
  "libs/dlq",
  "tools/nats-demo",
  "tools/mock-weather-tool",
  "apps/cli-dlq",
  "apps/slack_oauth",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.5"
authors = ["Greentic AI"]

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt","env-filter"] }
async-nats = "0.44"
axum = "0.8"
hyper = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
time = { version = "0.3", features = ["macros","parsing"] }
uuid = { version = "1", features = ["v4","serde"] }
async-trait = "0.1"
metrics = "0.24"
once_cell = "1"
clap = { version = "4", features = ["derive"] }
opentelemetry = { version = "0.31", features = ["metrics", "trace"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "http-proto", "metrics", "trace"] }
opentelemetry-sdk = { version = "0.31", features = ["rt-tokio", "metrics", "trace"] }
tracing-opentelemetry = "0.33"
thiserror = "2"
rand = "0.9"
rsa = { version = "0.9", features = ["pem"] }
dashmap = "6"
greentic-types = "0.1"
secrets-core = { package = "greentic-secrets-core", version = "0.1" }
greentic-secrets = "0.1"
