[workspace]
members = [
  "apps/runner",
  "apps/ingress-common",
  "apps/egress-common",
  "apps/messaging-egress",
  "apps/messaging-gateway",
  "apps/messaging-tenants",
  "apps/subscriptions-teams",
  "libs/core",
  "libs/session",
  "libs/translator",
  "libs/security",
  "libs/telemetry",
  "libs/testutil",
  "libs/idempotency",
  "libs/backpressure",
  "libs/dlq",
  "tools/nats-demo",
  "tools/mock-weather-tool",
  "apps/cli-dlq",
  "apps/slack_oauth",
  "conformance/webchat",
  "tools/dev-viewer",
  "crates/greentic-messaging-cli",
  "crates/greentic-messaging-validate",
  "crates/greentic-messaging-pack-validator",
  "crates/messaging-test",
  "crates/gsm-bus",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.4.42"
authors = ["Greentic AI"]
repository = "https://github.com/greentic-ai/greentic-messaging"

[workspace.dependencies]
anyhow = "1"
async-nats = "0.46"
async-stream = "0.3"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
dashmap = "6"
futures = "0.3"
greentic-types = "0.4"
greentic-config = "0.4"
greentic-config-types = "0.4"
greentic-secrets-spec = "0.4"
greentic-interfaces-host = "0.4"
greentic-interfaces-wasmtime = "0.4"
greentic-session = { version = "0.4", default-features = false, features = ["inmemory"] }
greentic-telemetry = { version = "0.4", features = ["fmt"] }
greentic-flow = "0.4"
greentic-pack-lib = "0.4"
handlebars = "6"
hex = "0.4"
hmac = "0.12"
http = "1"
http-body-util = "0.1"
schemars = { version = "1", features = ["derive"] }
hyper = { version = "1", features = ["full"] }
include_dir = "0.7"
insta = { version = "1", features = ["json"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
metrics = "0.24"
nanoid = "0.4"
once_cell = "1"
rand = "0.9"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rsa = { version = "0.9", features = ["pem"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
jsonschema = "0.40"
serde_yaml_bw = "2.4.1"
serde_yaml = { package = "serde_yaml_bw", version = "2.4.1" }
secrets-core = { package = "greentic-secrets-core", version = "0.4" }
sha1 = "0.10"
sha2 = "0.10"
subtle = "2.5"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["macros","parsing"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tower = { version = "0.5", features = ["util", "limit", "timeout"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "std"] }
tracing-test = "0.2"
security = { package = "greentic-messaging-security", version = "0.4", path = "libs/security" }
unicode-segmentation = "1"
urlencoding = "2"
uuid = { version = "1", features = ["v4","serde"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
indexmap = "2"
wit-bindgen = "0.51"
rusqlite = { version = "0.38", features = ["bundled"] }
url = { version = "2.5", features = ["serde"] }
gsm-core = { version = "0.4", path = "libs/core" }
zip = "7"
gsm-telemetry = { version = "0.4", path = "libs/telemetry" }
gsm-session = { version = "0.4", path = "libs/session" }
gsm-dlq = { version = "0.4", path = "libs/dlq" }
gsm-backpressure = { version = "0.4", path = "libs/backpressure" }
gsm-idempotency = { version = "0.4", path = "libs/idempotency" }
gsm-translator = { version = "0.4", path = "libs/translator" }
gsm-bus = { path = "crates/gsm-bus", version = "0.4" }
gsm-gateway = { path = "apps/messaging-gateway", version = "0.4" }
gsm-testutil = { version = "0.4", path = "libs/testutil" }
