[package]
name = "setup-tools"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "telegram_setup"
path = "telegram_setup.rs"

[[bin]]
name = "teams_setup"
path = "teams_setup.rs"

[[bin]]
name = "whatsapp_setup"
path = "whatsapp_setup.rs"

[dependencies]
anyhow = { workspace = true }
dotenvy = "0.15"
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
