[package]
name = "gsm-cli-dlq"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
clap = { version = "4.5.21", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
gsm-core = { path = "../../libs/core" }
gsm-dlq = { path = "../../libs/dlq" }
