[package]
name = "gsm-cli-dlq"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
greentic-types = { workspace = true }
gsm-core = { path = "../../libs/core" }
gsm-dlq = { path = "../../libs/dlq" }
