[package]
name = "gsm-cli-dlq"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Greentic messaging package: cli dlq."
readme = "../../README.md"
repository = "https://github.com/greentic-ai/greentic-messaging"
homepage = "https://github.com/greentic-ai/greentic-messaging"
publish = false

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
gsm-telemetry = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
greentic-types = { workspace = true }
gsm-core = { path = "../../libs/core" }
gsm-dlq = { path = "../../libs/dlq" }
