[package]
name = "gsm-egress-common"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
gsm-backpressure = { path = "../../libs/backpressure" }
tracing = { workspace = true }
greentic-types = { workspace = true }
gsm-core = { path = "../../libs/core" }
gsm-telemetry = { path = "../../libs/telemetry" }

[dev-dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
