[package]
name = "gsm-egress-common"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
gsm-backpressure = { workspace = true }
tracing = { workspace = true }
greentic-types = { workspace = true }
gsm-core = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
