[package]
name = "gsm-egress-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Greentic messaging package: egress common."
readme = "../../README.md"
repository = "https://github.com/greentic-ai/greentic-messaging"
homepage = "https://github.com/greentic-ai/greentic-messaging"
publish = false

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
gsm-backpressure = { path = "../../libs/backpressure" }
tracing = { workspace = true }
greentic-types = { workspace = true }
gsm-core = { path = "../../libs/core" }
gsm-telemetry = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
