[package]
name = "gsm-egress-slack"
version.workspace = true
edition.workspace = true
publish = false

[features]
default = []
mock-http = []
e2e = ["dep:gsm-testutil"]

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
greentic-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
gsm-core = { path = "../../libs/core" }
gsm-translator = { path = "../../libs/translator" }
gsm-egress-common = { path = "../egress-common" }
gsm-backpressure = { path = "../../libs/backpressure" }
gsm-dlq = { path = "../../libs/dlq" }
futures = { workspace = true }
metrics = { workspace = true }
gsm-telemetry = { workspace = true }
async-trait = { workspace = true }
gsm-testutil = { path = "../../libs/testutil", optional = true, features = ["e2e", "visual"] }

[dev-dependencies]
dotenvy = "0.15"
