[package]
name = "gsm-egress-slack"
version.workspace = true
edition.workspace = true
publish = false

[features]
default = []
mock-http = []
e2e = ["dep:gsm-testutil"]

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
greentic-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
gsm-core = { workspace = true }
gsm-translator = { workspace = true }
gsm-egress-common = { workspace = true }
gsm-backpressure = { workspace = true }
gsm-dlq = { workspace = true }
futures = { workspace = true }
metrics = { workspace = true }
async-trait = { workspace = true }
gsm-testutil = { workspace = true, optional = true, features = ["e2e", "visual"] }

[dev-dependencies]
dotenvy = "0.15"
