[package]
name = "gsm-egress-teams"
version = "0.1.0"
edition = "2021"

[features]
default = []
mock-http = []

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
gsm-core = { path = "../../libs/core" }
gsm-translator = { path = "../../libs/translator" }
gsm-egress-common = { path = "../egress-common" }
gsm-backpressure = { path = "../../libs/backpressure" }
gsm-dlq = { path = "../../libs/dlq" }
time = { workspace = true }
futures = "0.3.31"
gsm-telemetry = { path = "../../libs/telemetry" }
metrics = { workspace = true }
async-trait = { workspace = true }
