[package]
name = "gsm-egress-teams"
version.workspace = true
edition.workspace = true
publish = false

[features]
default = []
mock-http = []

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
greentic-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
gsm-core = { path = "../../libs/core" }
gsm-translator = { path = "../../libs/translator" }
gsm-egress-common = { path = "../egress-common" }
gsm-backpressure = { path = "../../libs/backpressure" }
gsm-dlq = { path = "../../libs/dlq" }
time = { workspace = true }
futures = { workspace = true }
gsm-telemetry = { path = "../../libs/telemetry" }
metrics = { workspace = true }
async-trait = { workspace = true }
