[package]
name = "gsm-egress-teams"
version.workspace = true
edition.workspace = true
publish = false

[features]
default = []
mock-http = []
e2e = ["dep:gsm-testutil"]

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
greentic-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
gsm-core = { path = "../../libs/core", features = ["adaptive-cards"] }
gsm-translator = { path = "../../libs/translator" }
gsm-egress-common = { path = "../egress-common" }
gsm-backpressure = { path = "../../libs/backpressure" }
gsm-dlq = { path = "../../libs/dlq" }
time = { workspace = true }
futures = { workspace = true }
gsm-telemetry = { workspace = true }
metrics = { workspace = true }
async-trait = { workspace = true }
gsm-testutil = { path = "../../libs/testutil", optional = true }

[dev-dependencies]
dotenvy = "0.15"
