[package]
name = "egress-telegram"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
gsm-core = { path = "../../libs/core" }
gsm-translator = { path = "../../libs/translator" }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
greentic-types = { workspace = true }
async-nats = { workspace = true }
futures = { workspace = true }
gsm-backpressure = { path = "../../libs/backpressure" }
metrics = { workspace = true }
gsm-telemetry = { workspace = true }
gsm-egress-common = { path = "../egress-common" }
async-trait = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
