[package]
name = "egress-telegram"
version.workspace = true
edition.workspace = true
publish = false

[features]
default = []
mock-http = []
e2e = ["dep:gsm-testutil"]

[dependencies]
anyhow = { workspace = true }
gsm-core = { workspace = true }
gsm-translator = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
greentic-types = { workspace = true }
async-nats = { workspace = true }
futures = { workspace = true }
gsm-backpressure = { workspace = true }
metrics = { workspace = true }
gsm-egress-common = { workspace = true }
async-trait = { workspace = true }
gsm-testutil = { workspace = true, optional = true, features = ["e2e"] }

[dev-dependencies]
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
dotenvy = "0.15"
