[package]
name = "gsm-egress-webchat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
include_dir = "0.7"
gsm-core = { path = "../../libs/core" }
gsm-translator = { path = "../../libs/translator" }
gsm-egress-common = { path = "../egress-common" }
gsm-backpressure = { path = "../../libs/backpressure" }
gsm-dlq = { path = "../../libs/dlq" }
async-stream = "0.3.6"
futures = "0.3.31"
metrics = { workspace = true }
gsm-telemetry = { path = "../../libs/telemetry" }
dashmap = { workspace = true }

[dev-dependencies]
hyper = "1"
http-body-util = "0.1"
