[package]
name = "gsm-egress-webchat"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
greentic-types = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
include_dir = { workspace = true }
gsm-core = { path = "../../libs/core" }
gsm-translator = { path = "../../libs/translator" }
gsm-egress-common = { path = "../egress-common" }
gsm-backpressure = { path = "../../libs/backpressure" }
gsm-dlq = { path = "../../libs/dlq" }
async-stream = { workspace = true }
futures = { workspace = true }
metrics = { workspace = true }
gsm-telemetry = { path = "../../libs/telemetry" }
dashmap = { workspace = true }

[dev-dependencies]
hyper = { workspace = true }
http-body-util = { workspace = true }
