[package]
name = "gsm-egress-webchat"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Greentic messaging package: egress webchat."
readme = "../../README.md"
repository = "https://github.com/greentic-ai/greentic-messaging"
homepage = "https://github.com/greentic-ai/greentic-messaging"
publish = false

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
greentic-types = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
include_dir = { workspace = true }
gsm-core = { workspace = true, features = ["adaptive-cards"] }
gsm-translator = { workspace = true }
gsm-egress-common = { path = "../egress-common" }
gsm-backpressure = { workspace = true }
gsm-dlq = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
metrics = { workspace = true }
gsm-telemetry = { workspace = true }
dashmap = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
hyper = { workspace = true }
http-body-util = { workspace = true }
