[package]
name = "gsm-egress-webex"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Greentic messaging package: egress webex."
readme = "../../README.md"
repository = "https://github.com/greentic-ai/greentic-messaging"
homepage = "https://github.com/greentic-ai/greentic-messaging"
publish = false

[features]
default = []
mock-http = []
e2e = ["dep:gsm-testutil"]

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
greentic-types = { workspace = true }
time = { workspace = true }
gsm-core = { path = "../../libs/core" }
gsm-translator = { path = "../../libs/translator" }
gsm-egress-common = { path = "../egress-common" }
gsm-backpressure = { path = "../../libs/backpressure" }
gsm-dlq = { path = "../../libs/dlq" }
gsm-telemetry = { workspace = true }
async-trait = { workspace = true }
metrics = { workspace = true }
futures = { workspace = true }
gsm-testutil = { path = "../../libs/testutil", optional = true, features = ["visual"] }

[dev-dependencies]
axum = { workspace = true, features = ["macros"] }
tower = { workspace = true }
http-body-util = { workspace = true }
dotenvy = "0.15"
