[package]
name = "gsm-egress-whatsapp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
time = { workspace = true }
gsm-core = { path = "../../libs/core" }
gsm-translator = { path = "../../libs/translator" }
gsm-egress-common = { path = "../egress-common" }
gsm-backpressure = { path = "../../libs/backpressure" }
gsm-dlq = { path = "../../libs/dlq" }
futures = "0.3"
metrics = { workspace = true }
