[package]
name = "gsm-egress-whatsapp"
version.workspace = true
edition.workspace = true
publish = false

[features]
default = []
mock-http = []
e2e = ["dep:gsm-testutil"]

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
greentic-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
time = { workspace = true }
gsm-core = { workspace = true }
gsm-translator = { workspace = true }
gsm-egress-common = { workspace = true }
gsm-backpressure = { workspace = true }
gsm-dlq = { workspace = true }
futures = { workspace = true }
metrics = { workspace = true }
gsm-testutil = { workspace = true, optional = true }

[dev-dependencies]
dotenvy = "0.15"
