[package]
name = "gsm-ingress-common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
http = "1.3.1"
hyper = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tower = { version = "0.5.2", features = ["limit", "timeout", "util"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
hmac = "0.12.1"
sha2 = "0.10.9"
base64 = "0.22.1"
serde = { workspace = true }
serde_json = { workspace = true }
async-nats = { workspace = true }
gsm-telemetry = { path = "../../libs/telemetry" }
gsm-idempotency = { path = "../../libs/idempotency" }
gsm-core = { path = "../../libs/core" }

[dev-dependencies]
http-body-util = "0.1.3"
