[package]
name = "gsm-ingress-common"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tower = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-nats = { workspace = true }
greentic-types = { workspace = true }
gsm-idempotency = { path = "../../libs/idempotency" }
gsm-core = { path = "../../libs/core" }

[dev-dependencies]
http-body-util = { workspace = true }
