[package]
name = "gsm-ingress-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Greentic messaging package: ingress common."
readme = "../../README.md"
repository = "https://github.com/greentic-ai/greentic-messaging"
homepage = "https://github.com/greentic-ai/greentic-messaging"
publish = false

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tower = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-nats = { workspace = true }
gsm-telemetry = { workspace = true }
gsm-idempotency = { path = "../../libs/idempotency" }
gsm-core = { path = "../../libs/core" }
gsm-session = { path = "../../libs/session" }
greentic-types = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }
rand = { workspace = true }
