[package]
name = "gsm-ingress-slack"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-nats = { workspace = true }
time = { workspace = true }
gsm-core = { path = "../../libs/core" }
gsm-idempotency = { path = "../../libs/idempotency" }
gsm-ingress-common = { path = "../ingress-common" }
gsm-dlq = { path = "../../libs/dlq" }
hmac = "0.12.1"
sha2 = "0.10.9"
security = { path = "../../libs/security" }
metrics = { workspace = true }
