[package]
name = "gsm-ingress-teams"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
greentic-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-nats = { workspace = true }
time = { workspace = true }
gsm-core = { path = "../../libs/core" }
gsm-ingress-common = { path = "../ingress-common" }
gsm-idempotency = { path = "../../libs/idempotency" }
gsm-dlq = { path = "../../libs/dlq" }
security = { workspace = true }
metrics = { workspace = true }
