[package]
name = "gsm-ingress-telegram"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-nats = { workspace = true }
time = { workspace = true }
gsm-core = { path = "../../libs/core" }
gsm-ingress-common = { path = "../ingress-common" }
gsm-dlq = { path = "../../libs/dlq" }
gsm-idempotency = { path = "../../libs/idempotency" }
security = { package = "greentic-messaging-security", path = "../../libs/security" }
gsm-telemetry = { path = "../../libs/telemetry" }
metrics = { workspace = true }
serde_yaml_bw = "2.4.1"
async-trait = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = "3"
tracing-test = "0.2"
