[package]
name = "gsm-ingress-webchat"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
greentic-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-nats = { workspace = true }
time = { workspace = true }
gsm-core = { workspace = true }
gsm-ingress-common = { workspace = true }
gsm-idempotency = { workspace = true }
gsm-dlq = { workspace = true }
include_dir = { workspace = true }
security = { workspace = true }
metrics = { workspace = true }
