[package]
name = "gsm-ingress-webex"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
time = { workspace = true }
hmac = "0.12"
sha2 = "0.10"
sha1 = "0.10"
subtle = "2.5"
hex = "0.4"
async-trait = { workspace = true }
gsm-core = { path = "../../libs/core" }
gsm-idempotency = { path = "../../libs/idempotency" }
gsm-ingress-common = { path = "../ingress-common" }
gsm-telemetry = { path = "../../libs/telemetry" }
gsm-translator = { path = "../../libs/translator" }
metrics = { workspace = true }

[dev-dependencies]
axum = { workspace = true, features = ["macros"] }
tower = "0.5"
tokio = { workspace = true, features = ["rt", "macros"] }
