[package]
name = "gsm-ingress-webex"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
greentic-types = { workspace = true }
time = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
subtle = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }
gsm-core = { path = "../../libs/core" }
gsm-idempotency = { path = "../../libs/idempotency" }
gsm-ingress-common = { path = "../ingress-common" }
gsm-translator = { path = "../../libs/translator" }
metrics = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
axum = { workspace = true, features = ["macros"] }
tower = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
