[package]
name = "gsm-ingress-whatsapp"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-nats = { workspace = true }
time = { workspace = true }
gsm-core = { path = "../../libs/core" }
gsm-idempotency = { path = "../../libs/idempotency" }
gsm-ingress-common = { path = "../ingress-common" }
gsm-dlq = { path = "../../libs/dlq" }
hmac = "0.12"
sha2 = "0.10"
security = { path = "../../libs/security" }
gsm-telemetry = { path = "../../libs/telemetry" }
metrics = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
